# sdql

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
sdql/: __init__.py  sdql.py
