[project]
name = "sdql"
version = "0.1.0"
description = "SDQL Python client"
authors = [
    {name = "Kevin Lane", email = "lane.kevin.a@gmail.com"},
]
dependencies = [
    "requests>=2.28.0",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]
pandas = [
    "pandas>=1.1.5",
]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=2.20.0",
]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "google"

[tool.flakeheaven]
format = "grouped"
max_complexity = 10
max_line_length = 88
show_source = true

[tool.flakeheaven.plugins]
pycodestyle = ["+*"]
pyflakes = ["+*"]
mccabe = ["+*"]
dlint = ["+*"]
pylint = ["+*"]
"flake8-*" = ["+*"]
flake8-annotations = ["-ANN101"]
